# short-win-ai-trader

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  er system modules ===  fetch_data_0611.py  hort --since=2 days ago  index.html  package-lock.json  package.json  progress-v2.txt  progress.txt  pyproject.toml  requirements.txt  session_log.md  setup.py  tailwind.config.js
.github/workflows/: ci.yml
_temp_workflows/: deploy.yml
api/: main.py
api/core/: config.py  logger.py
api/models/: responses.py
api/routers/: __init__.py  admin.py  auth.py  diagnosis.py  intraday.py  market.py  membership.py  news.py  order.py  scoring.py  sentiment.py  stock.py  strategy.py  tactics.py  trade_journal.py  user.py  yingyou.py
api/services/: akshare_service.py  data_sync.py  ifind_service.py  static_proxy.py  strategy_engine.py  websocket_manager.py
cache/: ak_limit_up_20260520.json  ak_market_overview.json  fund_flow.json  limit_up.json  market_overview.json  sentiment.json
config/: default.yaml
docs/: TUSHARE_SETUP.md  WEBSOCKET_POSTGRESQL.md
hr-platform/: README.md  index.html  package.json
hr-platform/src/: App.tsx
scripts/: start_demo.bat  start_demo.sh
server/: data_sync.py  database.py  requirements.txt  tushare_proxy.py  websocket_server.py
short_win_ai_trader/: __init__.py
short_win_ai_trader/cli/: commands.py  formatters.py  main.py
short_win_ai_trader/core/: config.py  data_manager.py  engine.py  (+2 more)
src/: App.tsx  index.css
tests/: test_m04_yingyou.py  test_m05_capital_flow.py  test_m06_scorer.py  test_m07_diagnosis.py
(+133 files in other folders)
